force-app/main/default/objects/DRC_NBC_Invoice_Line_Item__c/DRC_NBC_Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>Line Number-{0000}</displayFormat>
        <label>Invoice Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>