force-app/main/default/objects/DRC_NBC_Invoice_Line_Item__c/fields/DRC_NBC_Amount__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>