force-app/main/default/objects/DRC_NBC_Invoice_Line_Item__c/fields/DRC_NBC_Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Batch_Number__c</fullName>
    <label>Batch Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>