force-app/main/default/objects/DRC_NBC_Invoice_Line_Item__c/fields/DRC_NBC_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <referenceTo>DRC_NBC_Invoice__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>