force-app/main/default/objects/DRC_NBC_Invoice_Line_Item__c/fields/DRC_NBC_Lot_No__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Lot_No__c</fullName>
    <label>Lot No</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>