force-app/main/default/objects/DRC_NBC_Invoice_Line_Item__c/fields/DRC_NBC_Lot_Numbers__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Lot_Numbers__c</fullName>
    <label>Lot Numbers</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>