force-app/main/default/objects/DRC_NBC_Invoice_Line_Item__c/fields/DRC_NBC_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Product_Code__c</fullName>
    <label>Product Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>