force-app/main/default/objects/DRC_NBC_Invoice_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DRC_NBC_Lot_Numbers__c</columns>
    <columns>DRC_NBC_Product_Code__c</columns>
    <columns>DRC_NBC_Invoice_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>